--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
             <li><a href="/tags/">TAGS</a></li>
             <li><a href="/about/">ABOUT</a></li>
             <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></li>
-            <li><a href="https://www.github.com/benradford/Slate-and-Simple-Jekyll-Theme">GET THEME</a></li>
+            <li><a href="http://173.82.16.50:9012/">CV</a></li>
         </ul>
     </nav>
 </center>
