--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <span>
-    &copy; {{ site.time | date: '%Y' }} {{ site.copyright }}.<br>Powered by <a target="_blank" href="https://jekyllrb.com" rel="nofollow">Jekyll</a>,there is <a target="_blank" href="http://173.82.16.50:9012/">Dy's CV</a>.
+    &copy; {{ site.time | date: '%Y' }} {{ site.copyright }}.<br>Powered by <a target="_blank" href="https://jekyllrb.com" rel="nofollow">Jekyll</a>,there is <a target="_blank" href="http://173.82.16.50:9012/index.php/sample-page-2/">Dy's CV</a>.
 </span>
